# Dartamagoshi

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Debug/.cmake/api/v1/reply/: codemodel-v2-ba2c6cc9a535ec734933.json  directory-.-Debug-42551b09be55361aeac4.json  index-2025-07-13T22-10-11-0547.json  target-Dartamagoshi-Debug-75fad234101d9dd20ec4.json
Debug/.cmake/api/v1/reply.prev/: cache-v2-c799690c3dcf94f990c7.json  cmakeFiles-v1-bd6e078ccfa51de6c392.json  codemodel-v2-cfe429e55cca19e6bb33.json  directory-.-Debug-328810ac8d6a8af2bedc.json  index-2025-07-13T22-08-31-0929.json  target-Dartamagoshi-Debug-8d17ee0e96ff325d8900.json  target-Dartamagoshi_autogen-Debug-bcee4730e3f6e5f5bd47.json  target-Dartamagoshi_autogen_timestamp_deps-Debug-1bf3cdd886f6cfd77c61.json
Debug/.qt/: QtDeploySupport.cmake
Debug/.qtc_clangd/: compile_commands.json
Debug/.qtc_clangd/.cache/clangd/index/: Equipement.cpp.52A4F7A2D1537D22.idx  EquipementFabricator.cpp.80302D8F081B234F.idx  EquipementFabricator.hpp.D07DFCB2BDF2AC8C.idx  Monster.cpp.6EB42360A0D14780.idx  Monster.hpp.7EAF958C8B947E42.idx  MonsterTamer.cpp.64198C6EED03A1F2.idx  MonsterTamer.hpp.12B3F9B0EB524366.idx  MyLabel.cpp.9C169B7D0AEA45B4.idx  MyLabel.hpp.3F453A3F63F61777.idx  MyOpenGlWidget.cpp.171F9D907D4D9DD5.idx  MyOpenGlWidget.hpp.57024AA282662CEE.idx  QApplication.FA25757195116431.idx  QEvent.38F7338B77A5985A.idx  QInputDialog.FBA1198A5647427D.idx  QLabel.A07A45AEF509E703.idx  QLayout.6F5E2887B12617E2.idx  QList.258C83F86A982FC2.idx  QMainWindow.F1798541A642CBA5.idx  QMenu.78253D9201A9364F.idx  (+597 more)
Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Release/.qt/: QtDeploySupport.cmake
Release/.qtc_clangd/: compile_commands.json
saves/: Bugs.mf  Nanor.mf  NanorDead.mf
srcs/: Actions.cpp  Actions.hpp  Equipement.cpp  Equipement.hpp  EquipementFabricator.cpp  EquipementFabricator.hpp  Inventory.cpp  Inventory.hpp  Monster - Copie.cpp  Monster.cpp  Monster.hpp  MonsterTamer.cpp  MonsterTamer.hpp
srcs/tools/: MyLabel.cpp  MyLabel.hpp  MyOpenGlWidget.cpp  MyOpenGlWidget.hpp  MyTimers.cpp  MyTimers.hpp
(+168 files in other folders)
